feat: html 미리보기메타와 파비콘 추가

--- a/index.html
+++ b/index.html
@@ -2,8 +2,29 @@
 <html lang="ko">
   <head>
     <meta charset="UTF-8" />
+    <!-- 페이스북 미리보기 -->
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Rolling" />
+    <meta property="og:url" content="https://rolling-vert.vercel.app/" />
+    <meta property="og:title" content="💌 롤링페이지에 메시지를 남겨보세요!" />
+    <meta property="og:description" content="따뜻한 한 마디를 전해보세요 ✨" />
+    <!-- 이미지 교체 해야함 -->
+    <meta
+      property="og:image"
+      content="https://rolling-vert.vercel.app/assets/images/logo.png"
+    />
+
+    <!-- 트위터 미리보기 -->
+    <meta name="twitter:title" content="💌 롤링페이퍼에 메시지를 남겨보세요!" />
+    <meta name="twitter:description" content="따뜻한 한 마디를 전해보세요 ✨" />
+    <meta
+      name="twitter:image"
+      content="https://rolling-vert.vercel.app/assets/images/logo.png"
+    />
+
     <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <title>Rolling</title>
 
     <!-- 카카오 공유 api init -->
