--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="ko">
   <head>
     <meta charset="UTF-8" />
+    <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <!-- 페이스북 미리보기 -->
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="Rolling" />
@@ -22,10 +25,8 @@
       content="https://rolling-vert.vercel.app/assets/images/logo.png"
     />
 
-    <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <title>Rolling</title>
+    <!-- 파비콘 -->
+    <link rel="icon" href="@/assets/icons/favicon.svg" />
 
     <!-- 카카오 공유 api init -->
     <script
@@ -33,6 +34,8 @@
       integrity="sha384-dok87au0gKqJdxs7msEdBPNnKSRT+/mhTVzq+qOhcL464zXwvcrpjeWvyj1kCdq6"
       crossorigin="anonymous"
     ></script>
+
+    <title>Rolling</title>
   </head>
   <body>
     <div id="root"></div>
