refactor: html 미리보기이미지 수정

--- a/index.html
+++ b/index.html
@@ -11,10 +11,9 @@
     <meta property="og:url" content="https://rolling-vert.vercel.app/" />
     <meta property="og:title" content="💌 롤링페이지에 메시지를 남겨보세요!" />
     <meta property="og:description" content="따뜻한 한 마디를 전해보세요 ✨" />
-    <!-- 이미지 교체 해야함 -->
     <meta
       property="og:image"
-      content="https://rolling-vert.vercel.app/assets/images/logo.png"
+      content="https://rolling-vert.vercel.app/assets/images/previewImg.png"
     />
 
     <!-- 트위터 미리보기 -->
@@ -22,7 +21,7 @@
     <meta name="twitter:description" content="따뜻한 한 마디를 전해보세요 ✨" />
     <meta
       name="twitter:image"
-      content="https://rolling-vert.vercel.app/assets/images/logo.png"
+      content="https://rolling-vert.vercel.app/assets/images/previewImg.png"
     />
 
     <!-- 파비콘 -->
