--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     />
 
     <!-- 파비콘 -->
-    <link rel="icon" href="@/assets/icons/favicon.svg" />
+    <link rel="icon" href="icons/favicon.svg" />
 
     <!-- 카카오 공유 api init -->
     <script
