[PostNav] 리다이렉션 수정 / 리액션 수정 / useRecipientId.js 생성 (#42)
* feat: html 미리보기메타와 파비콘 추가

* fix: 코드 순서변경

* fix: useRecipientId생성 및 수정

* fix: useRecipient 리디렉션으로 수정

* refactor: 필요없는 코드 삭제

* refactor: html 미리보기이미지 수정

* fix: reaction객체데이터

* fix:PostPageLayout 리다이렉션 수정

* refactor: 이모지 클릭했을 때 바로 반영되게 수정

* style: 이모지 개수 수정

---------

Co-authored-by: suhyung kwon <ospac111@gmail.com>

--- a/index.html
+++ b/index.html
@@ -4,7 +4,28 @@
     <meta charset="UTF-8" />
     <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Rolling</title>
+
+    <!-- 페이스북 미리보기 -->
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Rolling" />
+    <meta property="og:url" content="https://rolling-vert.vercel.app/" />
+    <meta property="og:title" content="💌 롤링페이지에 메시지를 남겨보세요!" />
+    <meta property="og:description" content="따뜻한 한 마디를 전해보세요 ✨" />
+    <meta
+      property="og:image"
+      content="https://rolling-vert.vercel.app/assets/images/previewImg.png"
+    />
+
+    <!-- 트위터 미리보기 -->
+    <meta name="twitter:title" content="💌 롤링페이퍼에 메시지를 남겨보세요!" />
+    <meta name="twitter:description" content="따뜻한 한 마디를 전해보세요 ✨" />
+    <meta
+      name="twitter:image"
+      content="https://rolling-vert.vercel.app/assets/images/previewImg.png"
+    />
+
+    <!-- 파비콘 -->
+    <link rel="icon" href="icons/favicon.svg" />
 
     <!-- 카카오 공유 api init -->
     <script
@@ -12,6 +33,8 @@
       integrity="sha384-dok87au0gKqJdxs7msEdBPNnKSRT+/mhTVzq+qOhcL464zXwvcrpjeWvyj1kCdq6"
       crossorigin="anonymous"
     ></script>
+
+    <title>Rolling</title>
   </head>
   <body>
     <div id="root"></div>
