--- a/index.html
+++ b/index.html
@@ -35,6 +35,13 @@
     ></script>
 
     <title>Rolling</title>
+
+    <!-- 카카오 공유 api init -->
+    <script
+      src="https://t1.kakaocdn.net/kakao_js_sdk/2.7.5/kakao.min.js"
+      integrity="sha384-dok87au0gKqJdxs7msEdBPNnKSRT+/mhTVzq+qOhcL464zXwvcrpjeWvyj1kCdq6"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <div id="root"></div>
