fix: 카카오공유 이미지 변경

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta property="og:description" content="따뜻한 한 마디를 전해보세요 ✨" />
     <meta
       property="og:image"
-      content="https://rolling-vert.vercel.app/assets/images/previewImg.png"
+      content="https://rolling-vert.vercel.app/images/previewImg.png"
     />
 
     <!-- 트위터 미리보기 -->
@@ -21,7 +21,7 @@
     <meta name="twitter:description" content="따뜻한 한 마디를 전해보세요 ✨" />
     <meta
       name="twitter:image"
-      content="https://rolling-vert.vercel.app/assets/images/previewImg.png"
+      content="https://rolling-vert.vercel.app/images/previewImg.png"
     />
 
     <!-- 파비콘 -->
